WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46807
[WINCE] Buildfix for Assertions.cpp
https://bugs.webkit.org/show_bug.cgi?id=46807
Summary
[WINCE] Buildfix for Assertions.cpp
Patrick R. Gansterer
Reported
2010-09-29 07:05:22 PDT
see patch
Attachments
Patch
(1.50 KB, patch)
2010-09-29 07:11 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2010-09-29 07:11:08 PDT
Created
attachment 69190
[details]
Patch
Andreas Kling
Comment 2
2010-09-29 07:20:37 PDT
Comment on
attachment 69190
[details]
Patch LGTM. Thanks for fixing this!
WebKit Commit Bot
Comment 3
2010-09-29 08:06:40 PDT
Comment on
attachment 69190
[details]
Patch Clearing flags on attachment: 69190 Committed
r68644
: <
http://trac.webkit.org/changeset/68644
>
WebKit Commit Bot
Comment 4
2010-09-29 08:06:45 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5
2010-09-29 08:21:07 PDT
http://trac.webkit.org/changeset/68644
might have broken Qt Windows 32-bit Release and Qt Windows 32-bit Debug The following changes are on the blame list:
http://trac.webkit.org/changeset/68643
http://trac.webkit.org/changeset/68644
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug