2010-09-29  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Andreas Kling.

        [WINCE] Buildfix for Assertions.cpp after r68511.
        https://bugs.webkit.org/show_bug.cgi?id=46807

        Some, but not all WinCE environments have support for IsDebuggerPresent().
        Add HAVE(ISDEBUGGERPRESENT) to make this a build option.
        HAVE(ISDEBUGGERPRESENT) will be 1 for all OS(WIN) by default.

        * wtf/Assertions.cpp:
        * wtf/Platform.h:

Canonical link: https://commits.webkit.org/59306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68644 268f45cc-cd09-0410-ab3c-d52691b4dbfc